--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
           <div class="col s4">
             <p> I am taking Arabic. Why should you care? You shouldn't. Lalalalalalalalalalalalalalalalalalalalalalalalalallalalala. </p>
           </div>
+
+          <div class="cols5">
+            <p> Did I do this right?? Well we'll see when I try this <p>
+          </div>
+
       </section>
 
      <!--Import jQuery before materialize.js-->
